2007-04-10  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): CUPS_PRINTER_COMMANDS.

2007-04-04  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.20.

2007-04-04  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinters): printer-state-reasons
	is a list.

2007-03-27  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.19.

2007-03-27  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): Job state constants.

2007-03-18  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.18.

2007-03-18  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getJobs): Include job-state
	attribute.
	(Connection_getJobs): Include job-preserved attribute.
	(Connection_getJobs): Include time-at-creation, time-at-processing
	and time-at-completed attributes.
	(Connection_getJobs): Include job-media-sheets and
	job-media-sheets-completed attributes.
	(Connection_getJobs): New optional parameters 'which_jobs' and
	'my_jobs'.
	(Connection_setJobHoldUntil): New method.
	(Connection_restartJob): New Method.

2007-01-03  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.17.

2007-01-03  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (ppd_encoding_is_utf8): Handle there being no known
	encoding for the PPD file (bug #220136).

2006-12-15  Tim Waugh  <twaugh@redhat.com>

	* cupsppd.c (PPD_localize): New method.

2006-12-07  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.16.

2006-12-07  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinters): Include
	printer-state-reasons attribute.

2006-11-30  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinters): Include
	printer-state-message attribute.
	(do_printer_request): Set printer-state-message if reason given.
	(Connection_methods): Updated help strings.
	(Connection_adminSetServerSettings): Fixed small memory leak.
	(Connection_init): More debug.
	(Connection_dealloc): Likewise.
	(do_printer_request): Likewise.